[gd_scene load_steps=3 format=3 uid="uid://c2rqjy1llb47w"]

[ext_resource type="Script" path="res://singleplayer/SelectFiber.gd" id="1_hey86"]

[sub_resource type="LabelSettings" id="LabelSettings_mvv0o"]
font_size = 26

[node name="SelectFiber" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hey86")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="StartJourneyText" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Welcome to Fiber!

You're about to start your journey. 
First, however, I'd like to know something.

(Click to continue)"
label_settings = SubResource("LabelSettings_mvv0o")
horizontal_alignment = 1

[node name="FiberButtons" type="VBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Passion" type="Button" parent="VBoxContainer/FiberButtons"]
layout_mode = 2
text = "I'm passionate"

[node name="Imagination" type="Button" parent="VBoxContainer/FiberButtons"]
layout_mode = 2
text = "I'm creative"

[node name="Growth" type="Button" parent="VBoxContainer/FiberButtons"]
layout_mode = 2
text = "I'm always growing"

[node name="Logic" type="Button" parent="VBoxContainer/FiberButtons"]
layout_mode = 2
text = "I'm rational"

[connection signal="pressed" from="VBoxContainer/FiberButtons/Passion" to="." method="_on_passion_pressed"]
[connection signal="pressed" from="VBoxContainer/FiberButtons/Imagination" to="." method="_on_imagination_pressed"]
[connection signal="pressed" from="VBoxContainer/FiberButtons/Growth" to="." method="_on_growth_pressed"]
[connection signal="pressed" from="VBoxContainer/FiberButtons/Logic" to="." method="_on_logic_pressed"]
